<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">IDANCE</string>
    <string name="facebook_app_id">5973343579368269</string>
    <string name="fb_login_protocol_scheme">fb5973343579368269</string>
    <string name="facebook_client_token">c65cb04cb3b1ab3d9f01297ff64819f7</string>

    //app language
    <string name="kh_m_ph_theo"><b>Khám phá theo</b></string>
    <string name="txt_unit_last"><b>Bài học mới nhất</b></string>
    <string name="txt_lasted_course"><b>Khóa học mới nhất</b></string>
    <string name="txt_single_unit"><b>Danh sách bài học đơn lẻ</b></string>
    <string name="tab_person">Cá nhân</string>
    <string name="tab_course">Khóa học</string>
    <string name="tab_single">Bài đơn</string>
    <string name="tab_home">Trang chủ</string>
    <string name="dance_everywhere"><font color='#FF8F71'>Dance</font> Everywhere</string>
    <string name="type_key_for_search">Nhập từ khóa tìm kiếm</string>
    <string name="discover">Khám phá</string>
    <string name="txt_forget_password">Quên mật khẩu?</string>
    <string name="txt_register_now">Đăng ký ngay</string>
    <string name="login">Đăng nhập</string>
    <string name="register_new">Đăng Ký Mới</string>
    <string name="register">Đăng ký</string>
    <string name="type_email">Nhập Email</string>
    <string name="name_login">Tên đăng nhập</string>
    <string name="txt_accept_term">Bạn đồng ý với mọi <font color='#FF8F71'>điều khoản &amp; điều kiện</font> trong thỏa thuận người dùng của IDance.</string>
    <string name="txt_welcome_to_idance">Chào mừng bạn đến với <font family="horizon" color='#FF8F71'>IDANCE</font></string>
    <string name="cancel">Hủy bỏ</string>
    <string name="password">Mật khẩu</string>
    <string name="or">Hoặc</string>
    <string name="premium">Premium</string>
    <string name="young">Trẻ trung</string>
    <string name="let_dance">Let\'s dance</string>
    <string name="action">Năng động</string>
    <string name="txt_guide_search">Tìm kiếm bài nhảy đơn, khóa học và hơn thế nữa...</string>
    <string name="txt_list_course">Danh sách khóa học</string>
    <string name="disconnect_network">Mất kết nối mạng!</string>
    <string name="notify_disconnect_network">Bạn đang offline. Vui lòng kiểm tra lại kết nối.</string>
    <string name="retry">Thử lại</string>
    <string name="full_name">Họ và tên</string>
    <string name="watch_trailer">Xem thử</string>
    <string name="learn_now">Học Ngay</string>
    <string name="length">Thời lượng</string>
    <string name="release_date">Ngày phát hành</string>
    <string name="teacher">Giáo viên</string>
    <string name="description">Mô tả</string>
    <string name="comments">Bình luận</string>
    <string name="see_more">Xem thêm</string>
    <string name="reply">Trả lời</string>
</resources>