<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app_black">

    <TextView
        android:id="@+id/point_top"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_close_black_super"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/point_top"
        app:tint="@color/white" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/register_new"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_logo"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_login" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relative_username"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_edittext_username_super"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/ivLogo">


                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/name_login"
                    android:imeOptions="flagNoExtractUi"
                    android:maxLength="50"
                    android:minHeight="48dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:singleLine="true"
                    android:textColor="#222222"
                    android:textColorHint="#999999"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/clear_text_user"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/clear_text_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_clear_edittext_super"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_email"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_edittext_username_super"
                app:layout_constraintTop_toBottomOf="@+id/relative_username">


                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:hint="@string/type_email"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress"
                    android:maxLength="20"
                    android:minHeight="48dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:singleLine="true"
                    android:textColor="#222222"
                    android:textColorHint="#999999"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/clear_text_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/clear_text_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_clear_edittext_super"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relative_password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_edittext_username_super"
                app:layout_constraintTop_toBottomOf="@+id/container_email">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:hint="Mật khẩu"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:minHeight="48dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:singleLine="true"
                    android:textColor="#222222"
                    android:textColorHint="#999999"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/clear_text_pass"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/clear_text_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_show_pass_super"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <CheckBox
                android:id="@+id/cb_term"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="16dp"
                android:text="@string/txt_accept_term"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/relative_password"
                app:layout_constraintStart_toStartOf="@+id/relative_password"
                app:layout_constraintTop_toBottomOf="@+id/relative_password" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_btn_login_super"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/cb_term" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>